# dmi-ipac

./: .gitignore  .netlifyignore  ARCHITECTURE.md  ARCHITECTURE_v1_netlify.md  CALCULATION_DISCREPANCIES.md  CLAUDE.md  KNOWN_LIMITATIONS.md  README.md  dev_server.py  formulas.md  netlify.toml  package.json  pyproject.toml  requirements.txt  tailwind.config.js  validate.py  validation_full.csv  vba_source.txt  vercel.json
api/: calculate.py
netlify/functions/: calculate.py
netlify/functions/tests/: test_calculate_api.py  test_calculate_unit.py
public/: index.html  styles.css
src/: input.css
targets/android/: README.md
targets/android/app/: build.gradle.kts
targets/android/app/src/main/: AndroidManifest.xml
targets/android/app/src/main/java/com/dmimfg/wcac/: MainActivity.kt  WcacApi.kt
targets/api/: .gitignore  db.py  main.py  requirements.txt
targets/cli/: wcac_cli.py
targets/desktop/: wcac_gui.py
targets/web/: index.html
tests/: requirements-test.txt  test_e2e.py  test_live.py  test_unit.py
tests/reference_data/: fluid_properties.py  validation_cases.py
tests/spreadsheet/: compare.py  extract_geometry.py  extract_intermediates.py  scenarios.py  xl_driver.py
wcac/: __init__.py  calculate.py  exact_geometry.py  fluids.py  geometry.py  models.py  solver.py  surface.py  types.py  units.py  validation.py
